Sat Dec 09 21:16:09 1995  Karl Fogel  (kfogel@beezley.cyclic.com)

		* Added cvs.exe, mainly to test binary file handling.  Once we
		know it works, we can remove it.

Sat Dec 09 15:29:16 1995  Karl Fogel  (kfogel@beezley.cyclic.com)

		* options.h (DIFF, GREP): don't expect autoconf to help us out.

Sat Dec 09 15:05:41 1995  Karl Fogel  (kfogel@beezley.cyclic.com)

		* makefile.in (libdir): Fixed.

		* options.h: define CVS_AUTH_CLIENT_SUPPORT and
		CVS_AUTH_SERVER_SUPPORT, instead of CVS_LOGIN.

Thu Dec  7 14:49:16 1995  Jim Meyering  (meyering@comco.com)

	* filesubr.c (isaccessible): Rename from isaccessable.

Mon Dec  4 11:28:10 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* Makefile.in (DISTFILES): prefix all filenames with
	  ${srcdir}${PS}
	  (dist-dir): remove ${srcdir}${PS} (some files already had this
	  prefix, now all have it)

Fri Dec  1 14:29:44 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * Makefile.in (srcdir, libdir, cvs_srcdir): use autoconf vars.
        (dist-dir): use above vars now that they are autoconf-friendly.
        (clean): same.

Thu Nov 30 18:09:50 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * waitpid.c (waitpid): if _cwait() returns -1, test errno.  If
        ECHILD, then just return pid, else return -1.  This is for OS/2,
        which doesn't have zombie processes, or any other way of
        remembering a child process after it exits, as far as I can tell.

        * run.c (close_on_exec): don't error, just silently do nothing.

        * Makefile.in: use src/client.c, not os2/client.c.

        * config.h (EXECUTE_PERMISSION_LOSES): define to 1 (see
        src/client.c for why).
        (START_RSH_WITH_POPEN_RW): define to 1 (see src/client.c).

Wed Nov 29 16:34:34 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (start_server): declare pipes[] as int, not FILE *.
        Kinda nice that it worked anyway, but scary.  Ugh.

Wed Nov 22 11:29:11 1995  Karl Fogel  <kfogel@floss.cyclic.com>
