@@ -1,3 +1,10 @@
+Mon Dec 11 12:43:35 1995  adamg  <adamg@microsoft.com>
+        
+	* config.h: Remove NEED_CALL_SOCKINIT macro in favor of the more
+ 	generic INITIALIZE_SOCKET_SUBSYSTEM.
+  	* rcmd.c: Move old NEED_CALL_SOCKINIT code here and wrap it in a
+ 	function, i.e init_sockets()
+        
 Sat Dec 09 21:16:09 1995  Karl Fogel  (kfogel@beezley.cyclic.com)
 
 		* Added cvs.exe, mainly to test binary file handling.  Once we
